--- a/assets/css/responsive.css
+++ b/assets/css/responsive.css
@@ -128,8 +128,9 @@
   .push-1,.push-2,.push-3,.push-4,.push-5,.push-6,.push-7,.push-8,.push-9,.push-10,.push-11,.push-12,.push-13,.push-14,.push-15,.push-16,.push-17,.push-18,.push-19,.push-20,.push-21,.push-22,.push-23,.push-24{float:right;position:relative;}
 }
 @media (max-width: 767px) {
-  body { padding-right: 20px; padding-left: 20px;}
-  .container { width: auto;}
+  body { }
+  .container { width: auto; padding-right: 20px; padding-left: 20px;}
+  .meta__panel { width: auto; padding-right: 20px; padding-left: 20px;}
   [class*="span-"]{
     display: block;
     float: none;
