--- a/assets/css/dossier.css
+++ b/assets/css/dossier.css
@@ -467,7 +467,25 @@ SECONDARY
 /*
 CREDITS
 /////////////////////////////////////////////////////////////////*/
-#credits        { color: #aaa; padding-bottom: 60px;}
+.pagination   { 
+  font-size: 11px; 
+  position: relative; 
+  clear: both; 
+  border-top: 1px solid #d4d5d3; 
+  padding: 36px 0; 
+  overflow: hidden;
+}
+.pagination a { color: #aaa; line-height: 1.5;}
+.pagination a:hover { color: #444;}
+.pagination a i { position: relative; top: 1px;}
+.pagination-previous{ float: left;}
+.pagination-next{ float: right;}
+.pagination-overview{ position: absolute; left: 50%; width: 100px; text-align: center; margin-left: -50px;}
+
+/*
+CREDITS
+/////////////////////////////////////////////////////////////////*/
+#credits        { color: #aaa; padding-bottom: 30px;}
 #credits h3.ui  { margin-bottom: 15px;}
 #credits a{
   font-weight: normal;
